alpm-db/tests/parse_error_snapshots/files/empty_line_preceeds_header.snap
---
source: alpm-db/tests/parse_errors.rs
description: "\n%FILES%\nusr/\nusr/bin/\nusr/bin/foo\n"
expression: error.to_string()
---
Parser failed with the following error:
parse error at line 1, column 1
  |
1 | 
  | ^
invalid alpm-db-files section header
expected %FILES%
